UI fixes. Add tabindex to cards. Changed z-index for modals and navbar.

--- a/src/components/cards/card.scss
+++ b/src/components/cards/card.scss
@@ -60,6 +60,10 @@
   }
 
   .front {
+    &:focus {
+      box-shadow: 0 0 15px yellow;
+    }
+
     img {
       object-fit: cover;
       width: 100%;
