--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,7 +17,8 @@ button {
   border-radius: 10px;
   color: $basicColor;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background: rgba($navbar_tilebottomlight, 0.8);
     transition: 0.1s;
   }
